--- a/src/cat/Makefile
+++ b/src/cat/Makefile
@@ -1,18 +1,19 @@
-GCC = gcc
-GCC1 = gcc -c -Wall -Werror -Wextra
+ALL: clean s21_cat
 
-all : s21_cat
+s21_cat:
+	gcc -Wall -Werror -Wextra s21_cat.c -o s21_cat
 
-s21_cat : s21_cat.o
-	$(GCC) s21_cat.o -o s21_cat
-	rm -rf *.o
+clean:
+	rm -rf s21_cat
 
-s21_cat.o : s21_cat.c s21_cat.h
-	$(GCC) s21_cat.c -c
+test_func:ALL
+	sh test_func_cat.sh
 
-clean :
-	rm -rf *.o s21_cat
+test_leak:ALL
+	sh test_leak_cat.sh
 
-rebuild : make clean
-	make all
-	
+style:
+	clang-format -i s21_cat.c
+	clang-format -i s21_cat.h
+	clang-format -n s21_cat.c
+	clang-format -n s21_cat.h
